# KV-Eviction-Experiments

./: README.md  analysis.ipynb  pyproject.toml
results/: output.jsonl  output_fullkv.jsonl  output_h2o.jsonl  output_rkv.jsonl  output_rkv_1000.jsonl  output_rkv_128.jsonl  output_rkv_1500.jsonl  output_rkv_2000.jsonl  output_rkv_500.jsonl  output_rkv_512.jsonl  output_snapkv_1000.jsonl  output_snapkv_1024.jsonl  output_snapkv_128.jsonl  output_snapkv_1500.jsonl  output_snapkv_2000.jsonl  output_snapkv_500.jsonl
token_dropping/: results.jsonl  token_id.json
utils/: parser.py
