[project]
name = "kv-eviction-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "antlr4-python3-runtime==4.11.1",
    "datasets>=4.1.1",
    "pandas>=2.3.3",
    "regex>=2025.9.18",
    "seaborn>=0.13.2",
    "tqdm[notebook]>=4.67.1",
    "word2number>=1.1",
]
